

    <ScrollView 
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >
    
        <Button
            android:id="@+id/italy1800"
            android:layout_width="fill_parent"
             android:layout_height="80dp"
            android:text="@string/italy1800" 
               android:layout_margin="5dp"
               android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
              android:background="@drawable/italy"
            
            />
        

     
        <Button
             android:background="@drawable/ny"
            android:id="@+id/ny1852"
            android:layout_width="fill_parent"
              android:layout_height="80dp"
            android:text="@string/ny1852" 
               android:layout_margin="5dp"
                          android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
            
            
            />
        
                <Button
                     android:background="@drawable/washington"
            android:id="@+id/washington1851"
             android:layout_height="80dp"
            android:layout_width="fill_parent"
            android:text="@string/washington1851" 
               android:layout_margin="5dp"
                          android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
            
            
            />
                
                                <Button
                                     android:background="@drawable/espana"
            android:id="@+id/spain1701"
            android:layout_width="fill_parent"
              android:layout_height="80dp"
            android:text="@string/spain1701" 
               android:layout_margin="5dp"
                                   android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
                       
            />
                                
                                                                <Button
                                                                    android:background="@drawable/argentina"
            android:id="@+id/argentina1867"
            android:layout_width="fill_parent"
              android:layout_height="80dp"
            android:text="@string/argentina1867"
               android:layout_margin="5dp"
                                    android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
             />
                                                                
 <Button
      android:background="@drawable/russia"
            android:id="@+id/russia1794"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:text="@string/russia1794" 
               android:layout_margin="5dp"
                                      android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"

            />
 
  		<Button
  		     android:background="@drawable/beijing"
            android:id="@+id/beijing1930"
            android:layout_width="fill_parent"
              android:layout_height="80dp"
            android:text="@string/beijing1930" 
               android:layout_margin="5dp"
                                      android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
            
            />
   		<Button
   		     android:background="@drawable/bogota"
            android:id="@+id/colombia1840"
            android:layout_width="fill_parent"
           android:layout_height="80dp"
            android:text="@string/colombia1840" 
               android:layout_margin="5dp"
                                     android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
            
            />       
               		<Button
            android:id="@+id/na1786"
             android:background="@drawable/na"
            android:layout_width="fill_parent"
             android:layout_height="80dp"
            android:text="@string/na1786"
               android:layout_margin="5dp"
                                      android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
 
             />  
            
               		               		<Button
               		               		     android:background="@drawable/berlin"
            android:id="@+id/berlin1860"
            android:layout_width="fill_parent"
          android:layout_height="80dp"
            android:text="@string/berlin1860" 
            android:layout_margin="5dp"
                                    android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="2"
            android:textSize="30sp"
            />  
<Button
            android:id="@+id/congo1708"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:text="@string/congo1708"
            android:background="@drawable/congo"
                                          android:textColor="@android:color/white"
             android:shadowColor="@android:color/black"
                android:shadowDx="-1"
                android:shadowDy="-1"
                android:shadowRadius="2"
                android:textSize="30sp"
             />  
        
    </LinearLayout>
    
    </ScrollView>


